--- a/ccg websitefrontend/styles.css
+++ b/ccg websitefrontend/styles.css
@@ -29,48 +29,6 @@ body{
     
 }
 
-
-/* 
-.listitems ul li {
-    #background-color: brown;
-    list-style: none;
-    text-decoration: none;
-
-    display: block;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-size:1.2rem ;
-    font-weight: bold;
-    
-    
-    
-}
-
-.listitems a{
-    text-decoration: none; 
-    color: #fff;
-}
-
-.listitems ul li:nth-child(5) {
-
-    margin-right: 30px;
-
-}
-
-p
-.listitems ul li:hover {
-
-    background-color: white ;
-    border-radius: 8px;
-    color: #000;
-  
-    
-}
-
-/* .listitems ul li a:hover {
-
-    color: #000;
-} */
 .listitems ul li {
 
     padding: 1rem;
@@ -112,7 +70,7 @@ nav ul {
 
 }
 
-.navbar{
+.mynavbar{
     background-color:#4696e5;
     display: flex;
     justify-content: space-between;
@@ -148,7 +106,11 @@ nav ul {
     color: white;
     
 }
-
+.homediv h1 p{
+    font-size: .5em;
+    color: white;
+    
+}
 .slideup{
 
     width:100%;
@@ -172,12 +134,26 @@ height: 110vh;
 width: 100%;
 position:fixed;
 z-index: 1;
+margin: 0;
 
 
 
 
 }
 
+.join-us{
+background-color: white !important;
+color: #000!important;
+}
+button:hover{
+    color: red !important;
+    cursor: pointer!important;
+    /* border:  0 0 10px #fff,
+    0 0 20px #fff,
+    0 0 30px #fff,
+    0 0 40px #fff,
+    0 0 120px #fff; */
+}
 
 .myname1 {
     background-color:white;
@@ -267,49 +243,12 @@ z-index: 1;
     margin: 15px;
 }
 
-.projects{
-    #background-color: aquamarine;
-    height: 700px;
-    width:70%;
-    align-self:center;
-    margin:20px;
-    font-size: 2em;
-    padding: 20px;
 
 
-
-}
-
-.solutions{
-    #background-color: green;
-    height: 200px;
-    width:70%;
-    align-self:center;
-    margin:20px;
-    font-size: 2em;
-    padding: 20px;
-}
-
-.contacts{
-
-    #background-color: aquamarine;
-    height: 300px;
-    width:70%;
-    align-self:center;
-    margin:20px;
-    font-size: 2em;
-    padding: 20px;
-    
-
-}
- 
-.contacts a{
-    text-decoration: none;
-}
 
 .footer{
 
-    height: 300px;
+    height: auto;
     width: 100%;
     margin-top: auto;
     background-color: #2B65EC;
@@ -322,9 +261,7 @@ z-index: 1;
 
 }
 
-.footer .ndeda{
-margin-top:15%;
-
+.footer .calvary{
 
 
 
@@ -335,11 +272,14 @@ margin-top:15%;
     margin-top: 3%;
     margin-bottom: 2%;
     text-decoration: none;
+    color: white;
 
 }
 
 .footer .email{
     text-decoration: none;
+    color: white;
+    margin-bottom: 30px;
 
 }
 
@@ -442,20 +382,20 @@ ul{
     }
   
   
-    .navbar{
+    .mynavbar{
         flex-direction: column;
         align-items: flex-start;
   
     }
   
   
-    .navbar .links ul{
+    .mynavbar .links ul{
   
         flex-direction: column;
         width: 100%;
   
     }
-    .navbar .links li{
+    .mynavbar .links li{
   
         text-align: center;
   
@@ -493,7 +433,7 @@ ul{
 
 
   
-.navbar{
+.mynavbar{
 
     display: flex;
     justify-content: space-between;
@@ -600,20 +540,20 @@ ul{
     }
   
   
-    .navbar{
+    .mynavbar{
         flex-direction: column;
         align-items: flex-start;
   
     }
   
   
-    .navbar .links ul{
+    .mynavbar .links ul{
   
         flex-direction: column;
         width: 100%;
   
     }
-    .navbar .links li{
+    .mynavbar .links li{
   
         text-align: center;
   
@@ -665,7 +605,7 @@ ul{
 
 
 
-
+/* Location page styling */
 
   .content{
       margin-top: 60px;
@@ -688,3 +628,431 @@ ul{
     align-items: center;
     background-color: #2B65EC;
   }
+
+
+
+
+
+  /* give form styling */
+  
+body{
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    min-height:100vh;
+    color:green;
+    margin:0;
+    
+    
+    }
+   
+    
+    
+    .messages {
+    color:red;
+    font-size:.8em;
+    position:relative;
+    top:-29px;
+    
+    
+    }
+    
+    
+      .containerform{
+          position:relative;
+          padding:70px 40px;
+          background-color: #fff;
+          border-radius:20px;
+          box-shadow:0.5px 25px rgba(0,0,0,0.2);
+    
+          width: 90%;
+          height: 400px;
+          z-index: 2;
+          margin-top:70px;
+          margin-bottom:70px;
+          max-width:350px;
+           font-family:'Agency FB';
+    
+    
+      }
+    
+      .containerform .inputbox {
+            position:relative;
+            width:100%;
+            height:46px;
+            margin-bottom:20px;
+    
+    
+    
+    
+      }
+    
+    
+      .containerform .inputbox:last-child {
+    
+      margin-bottom:0;
+    
+    
+      }
+      .containerform .inputbox:last-child {
+       margin-bottom:0;
+      }
+    
+      .containerform .inputbox input {
+      position:absolute;
+      top:0;
+      left:0;
+      width:90%;
+      border: 1px solid #111;
+      background:transparent;
+      padding:10px;
+      border-radius:4px;
+      box-sizing:border-box;
+      outline:none;
+      font-size:16px;
+      font-weight:300;
+      margin:0;
+    
+    
+      }
+    
+    
+     .containerform .inputbox span{
+    
+     position: absolute;
+     top:1px;
+     left:1px;
+     padding:10px;
+     display:inline-block;
+     font-size:16px;
+      font-weight:300;
+      transition:0.5s;
+      pointer-events:none;
+    
+    
+     }
+
+     .containerform .inputbox input:[type="submit"]{
+
+       
+    
+    
+    
+     }
+     
+      input:invalid {
+        box-shadow: none;
+    }
+    
+     input:focus ~ span {
+    
+        color: #2AC940;
+    
+      }
+    
+      input:focus{
+      box-shadow: none;
+      outline:none;
+      border: none;
+      border-bottom: 2px solid  #2AC940;
+      }
+    
+     .pa{
+    
+        font-size: .8em;
+        color:#2AC940;
+        position:relative;
+        top:-20px;
+    
+      }
+    
+    .submit{
+     background-color: #2AC940;
+     border: none;
+     width: 30%;
+     border-radius:4px;
+    }
+    
+      .submitb {
+    
+          font-size: 1rem;
+          color: white;
+          padding: 5px;
+    
+    
+    
+      }
+    
+    
+    
+    
+    
+    
+    @media screen and (min-width:400px) {
+    
+      /* .containerform{
+         #width:50%;
+         #align-self:start;
+      } */
+    
+    }
+
+
+    .giveform-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        justify-items: center;
+        width: 100vh;
+        height: auto;
+        min-height: 100vh;
+        background-image:linear-gradient( 180deg, #4696e5,  #4696e5);rgba(132, 0, 255,1)
+
+    }
+
+
+
+   .mydropdown{
+    display: block;
+    float: left;
+    /* padding: 1rem; */
+    position: relative;
+    text-decoration: none;
+    transition-duration: 0.5s;
+    margin:0;
+        
+       }
+       
+       .mydropdown:hover {
+         cursor: pointer;
+       }
+       
+       .mydropdown ul {
+         /* visibility: hidden;
+         opacity: 0; */
+         position: absolute;
+         transition: all 0.5s ease;
+         margin-top: 1rem;
+         left: 0;
+         /* display: none; */
+
+       }
+       
+       .mydropdown:hover{
+        visibility: visible;
+        opacity: 1;
+        display: block;
+        background-color: brown;
+       }
+       .mydropdown ul:hover {
+         visibility: visible;
+         opacity: 1;
+         display: block;
+         background-color: brown;
+       }
+       
+       ul li ul li {
+         clear: both;
+         width: 100%;
+       }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+       .subscribe{
+           margin-top: 70px;
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+           align-items: center;
+           justify-items:center ;
+           
+        
+       }
+
+       .embtn{
+           background-color: black;
+           padding: 11px;
+           border-radius:8px 0px 0px 8px ;
+       }
+       .subscribe button{
+           float: left;
+           color: white;
+
+       }
+       .subscribe input{
+           
+           width: 30vw;
+           padding: 12px;
+           border-radius:0px 8px 8px 0px ;
+           min-width: 120px;
+
+       }
+
+       *{
+        margin: 0px;
+        padding: 0px;
+    }
+    
+   
+
+    /* Homepage Animation */
+    
+    .context {
+        width: 100%;
+        position: absolute;
+        top:50vh;
+        
+    }
+    
+    .context h1{
+        text-align: center;
+        color: #fff;
+        font-size: 50px;
+    }
+    
+    
+    .area{
+        /* background: #4e54c8;  
+        background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);   */
+        width: 100%;
+        height:100vh;
+        margin: 0;
+        padding-left: 0;
+        
+       
+    }
+    
+    .circles{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    
+    .circles li{
+        position: absolute;
+        display: block;
+        list-style: none;
+        width: 20px;
+        height: 20px;
+        background: rgba(255, 255, 255, 0.2);
+        animation: animate 25s linear infinite;
+        bottom: -150px;
+        
+    }
+    
+    .circles li:nth-child(1){
+        left: 25%;
+        width: 80px;
+        height: 80px;
+        animation-delay: 0s;
+    }
+    
+    
+    .circles li:nth-child(2){
+        left: 10%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 2s;
+        animation-duration: 12s;
+    }
+    
+    .circles li:nth-child(3){
+        left: 70%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 4s;
+    }
+    
+    .circles li:nth-child(4){
+        left: 40%;
+        width: 60px;
+        height: 60px;
+        animation-delay: 0s;
+        animation-duration: 18s;
+    }
+    
+    .circles li:nth-child(5){
+        left: 65%;
+        width: 20px;
+        height: 20px;
+        animation-delay: 0s;
+    }
+    
+    .circles li:nth-child(6){
+        left: 75%;
+        width: 110px;
+        height: 110px;
+        animation-delay: 3s;
+    }
+    
+    .circles li:nth-child(7){
+        left: 35%;
+        width: 150px;
+        height: 150px;
+        animation-delay: 7s;
+    }
+    
+    .circles li:nth-child(8){
+        left: 50%;
+        width: 25px;
+        height: 25px;
+        animation-delay: 15s;
+        animation-duration: 45s;
+    }
+    
+    .circles li:nth-child(9){
+        left: 20%;
+        width: 15px;
+        height: 15px;
+        animation-delay: 2s;
+        animation-duration: 35s;
+    }
+    
+    .circles li:nth-child(10){
+        left: 85%;
+        width: 150px;
+        height: 150px;
+        animation-delay: 0s;
+        animation-duration: 11s;
+    }
+    
+    
+    
+    @keyframes animate {
+    
+        0%{
+            transform: translateY(0) rotate(0deg);
+            opacity: 1;
+            border-radius: 0;
+        }
+    
+        100%{
+            transform: translateY(-1000px) rotate(720deg);
+            opacity: 0;
+            border-radius: 50%;
+        }
+    
+    }
+
+
+
+    
+   
